--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,93 +1,258 @@
+// bower:scss
+@import '../bower_components/font-awesome/scss/font-awesome';
+// endbower
 
-@import 'variables';
-@import 'mixins';
-@import 'reset';
-@import 'header';
-@import 'footer';
-
-
-
-
+@import "variables";
+@import "reset";
+@import "typography";
+@import "header";
+@import "footer";
 
 body {
-	background: $background-color;
-	color: $font-color;
-	font-family: $font-stack;
-	font-size: 62.5%;
-	font-weight: normal;
+  color: $font-color;
+  font-family: $font-stack;
+  font-size: 62.5%;
+  font-weight: 200;
+  background: $background-color;
 }
 
 
-/*TYPOGRAPHY*/
 
-h1 {font-size: 3.9em; padding:50px 0 50px;font-weight: normal;}
-h2 {font-size: 2.9em; padding: 0 0 20px;font-weight: bold}
-h3 {font-size: 2.21em;padding:0 0 20px;}
-h4 {font-size: 1.69em;padding:0 0 10px;font-weight: bold;text-transform: uppercase}
+section {
 
-p { font-size: 1.5em;padding:0 0 30px;line-height: 160%;  }
-li { font-size: 1.5em;padding:0 0 5px;line-height: 160%  }
-
-section p, section li {font-size:2em;}
+  padding:50px 0;
+  overflow-x:hidden;
 
 
-li li, li p {font-size: inherit;}
-ul ul , ul ol, ol ol {font-size: inherit}
+  h2 {
+    text-align: center
+  }
 
-
-@media (min-width: 768px){
-	h1 {font-size: 5em;}
-	h2 {font-size: 3.1em}
-	h3 {font-size: 2.41em}
-	h4 {font-size: 1.79em}
 
 }
 
 
 
+#featured_section {
+
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  margin:0 0 60px;
+
+  ul#featured_slides {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    min-height: 500px;
+
+
+    li {
+      position: absolute;;
+      top:0;
+      left:0;
+      @extend .image_from_background;
+
+      height: 100%;
+      background-attachment: fixed;
+      opacity: 0;
+      transition: opacity 2s;
+
+      .slide_text {
+        padding:200px 0 10px;
+        max-width: 650px;
+        margin: auto;
+        text-align: center;
+        position: relative;
+        z-index: 10;
+      }
+
+      h1 {
+        color: white;
+        font-weight: bold;
+        padding:0 0 30px;
+        font-size: 7em;
+      }
+
+      p {
+        text-align: center;
+        color: white;
+      }
+
+      .gradient {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 90%;
+        z-index: 5;
+        @include linear-gradient( transparentize($background-color, 1), $background-color  );
+      }
 
 
 
-a {
-	text-decoration: none;
-	border-bottom: 1px dotted $primary-color;
+      &.visible_slide {
+        opacity: 1;
+
+        h1 {
+
+          //    animation: comeIn 1.5s ease-in-out forwards;
+
+        }
+      }
+    }
+  }
+
+
+
+}
+
+
+
+.section_prochainement {
+
+  .event_row {
+    margin-bottom:100px;
+
+    .image_from_background {
+      background-color: #eee;
+    }
+
+    .month {
+      font-size: 2.5em;
+      text-transform: uppercase;
+      display: block;
+      font-weight: bold;
+      opacity: 0.7;
+    }
+    .day {
+      display: block;
+      font-size: 7em;
+
+    }
+
+  }
+}
+
+
+table#more_events {
+.event_date {font-size: 1.5em;width: 20%;}
+.event_title {font-size: 1.8em;text-transform: uppercase;font-weight: bold}
+.event_info { font-style: italic;font-size: 1.5em;width: 30%;opacity: 0.8}
+
+}
+
+
+
+.see_more_events {
+  text-align: center;
+  margin:70px 0;
+
+  h4 {
+    padding:0 0 20px;
+  }
+  i {
+    padding:0 5px 0 0;
+  }
+
+  .button {
+    font-size: 1.7em;
+  }
+}
+
+
+
+
+.box {
+  background: $box-color;
+  padding: 20px;
+  margin:0 0 20px;
+}
+
+
+// NEWS
+.section_news {
+  .news_img {
+      @extend .image_from_background;
+      height: 200px;
+      margin:10px 0 20px;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+
+  p {
+  color: transparentize(white, 0.5);
+  }
+
+  a {
+    color: white;
+  }
+
+}
+
+
+
+
+// PARTNERS
+.partenaire_inner{background-repeat:no-repeat;-webkit-background-size:contain;background-size:contain;background-position:center center;width:60%;margin:0 20% 5px;height:100px}
+.bx-wrapper {
+    position: relative;
+    margin: 0 auto 60px;
+    padding: 0;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+}
+.bx-controls-direction a {
+    background: url('../images/chevron-l.svg') center center no-repeat;
+    -webkit-background-size: 18px 18px;
+    background-size: 18px;
+    opacity: 0.7;
+    height: 50px;
+    text-indent: -9999px;
+    width: 30px;
+    position: absolute;
+    left: -20px;
+    top: 40%;
+    top: calc(50% - 25px);
+}
+.bx-controls-direction a.bx-next {
+    background-image: url('../images/chevron-r.svg');
+    left: auto;
+    right: -20px;
+}
+
+
+
+
+
+.loading {
+	animation: spin 1s linear infinite;
+	width:20px;
 	display: inline-block;
-	font-style: italic;
-	border-radius:3px;
-	@include transition(0.3s);
+	height: 20px;
+	border:3px solid $primary_color;
+	border-radius: 7px;
+	position: relative;
+	text-align: center;
+	margin: auto;
+	overflow: hidden;
 
-
-	&:link, &:visited, &:active {
-		color: $primary-color
+	&:after, &:before {
+		@extend .loading;
+		content:'';
+		opacity: 0.6;
+		position:absolute;
+		top:5px;
+		left: 5px;
+		width: 14px;
+		height: 14px;
 	}
-	&:hover {
-		border-bottom: 1px solid $primary-color;
-		background-color: transparentize($primary-color,0.8)
+	&:before {
+		bottom:5px;
+		top:auto;
+		left:auto;
+		right:5px;
 	}
 }
-
-
-
-
-strong, b {font-weight: bold;}
-em, i {font-style: italic}
-
-table {
-	width: 100%;
-	margin:0 0 40px;
-}
-
-th, td {font-size: 1.5em;padding:10px;border:0}
-section td {font-size: 2em;line-height: 160%;padding:0 0 10px;}
-
-blockquote {
-	padding:20px 0 20px 40px;
-	border-left:4px solid #888;
-	margin:40px 20px 40px 40px;
-	font-size: 140%;
-	font-style: italic;
-	max-width: 700px;
-}
-blockquote p:last-child {padding-bottom: 0}
-
-input {padding: 10px;width: 100%;font-size: 1.5em;appearance:none;}
