--- a/scss/global.scss
+++ b/scss/global.scss
@@ -31,6 +31,44 @@ section {
 
 }
 
+#single_event_section {
+  padding:0;
+  margin:0 0 100px;
+
+  #single_event_inner {
+    position: relative;
+    @extend .image_from_background;
+    height: 100%;
+    width: 100%;
+    min-height: 500px;
+  }
+
+  .event_text {
+    position: relative;
+    z-index: 10;
+  }
+
+  h1 {
+    color: white;
+    font-weight: bold;
+    padding:120px 0 30px;
+    font-size: 6em;
+    text-align: center;
+  }
+}
+
+
+
+      .gradient {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 90%;
+        z-index: 5;
+        @include linear-gradient( transparentize($background-color, 1), $background-color  );
+      }
+
 
 
 #featured_section {
@@ -79,16 +117,6 @@ section {
         color: white;
       }
 
-      .gradient {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 90%;
-        z-index: 5;
-        @include linear-gradient( transparentize($background-color, 1), $background-color  );
-      }
-
 
 
       &.visible_slide {
@@ -115,7 +143,7 @@ section {
     margin-bottom:100px;
 
     .image_from_background {
-      background-color: #eee;
+      background-color: transparentize(white, 0.6);
     }
 
     a {
