--- a/scss/global.scss
+++ b/scss/global.scss
@@ -33,41 +33,76 @@ section {
 
 #single_event_section {
   padding:0;
-  margin:0 0 100px;
 
-  #single_event_inner {
-    position: relative;
-    @extend .image_from_background;
-    height: 100%;
-    width: 100%;
-    min-height: 500px;
-  }
+  min-height: 700px;
 
   .event_text {
     position: relative;
     z-index: 10;
+    margin:180px 0 100px;
+  }
+
+  audio {
+    width: 100%;
+    margin:0 0 10px;
   }
 
   h1 {
     color: white;
     font-weight: bold;
-    padding:120px 0 30px;
-    font-size: 6em;
-    text-align: center;
+    padding:0px 0 4px;
+    font-size: 5em;
+  }
+  p.meta {
+    padding: 0 0 5px
+  }
+
+}
+
+#single_event_background {
+  position: absolute;
+  @extend .image_from_background;
+  height: 600px;
+  width: 100%;
+  top:0;
+  z-index: -1;
+  .gradient {
+    height: 100%;
+    @include linear-gradient( transparentize($background-color, 0.4), $background-color  );
   }
 }
 
 
 
-      .gradient {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 90%;
-        z-index: 5;
-        @include linear-gradient( transparentize($background-color, 1), $background-color  );
-      }
+.date_container {
+  float:left;
+  margin:0 16px 0 0;
+
+}
+.month {
+  font-size: 2.6em;
+  text-transform: uppercase;
+  display: block;
+  opacity: 0.7;
+}
+.day {
+  display: block;
+  font-size: 8em;
+  font-weight: bold;
+}
+
+
+
+
+.gradient {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  z-index: 5;
+  @include linear-gradient( transparentize($background-color, 1), $background-color  );
+}
 
 
 
@@ -158,18 +193,7 @@ section {
       }
     }
 
-    .month {
-      font-size: 2.5em;
-      text-transform: uppercase;
-      display: block;
-      font-weight: bold;
-      opacity: 0.7;
-    }
-    .day {
-      display: block;
-      font-size: 7em;
 
-    }
 
   }
 }
@@ -300,4 +324,15 @@ table#more_events {
 		left:auto;
 		right:5px;
 	}
+}
+
+
+.event_slider {
+
+  .image_from_background, iframe {
+    height: 400px;
+    width: 100%;
+  }
+
+
 }
