--- a/scss/global.scss
+++ b/scss/global.scss
@@ -25,7 +25,8 @@ section {
 
 
   h2 {
-    text-align: center
+    text-align: center;
+
   }
 
 
@@ -83,7 +84,8 @@ section {
   font-size: 2.6em;
   text-transform: uppercase;
   display: block;
-  opacity: 0.7;
+   opacity: 0.7;
+
 }
 .day {
   display: block;
@@ -181,7 +183,7 @@ section {
       background-color: transparentize(white, 0.6);
     }
 
-    a {
+      h3  a {
       display: block;
 
 
