can search events by date and title

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -207,7 +207,7 @@ table#more_events {
         color: white;
     }
   }
-.event_date {font-size: 1.5em;width: 20%;}
+.event_date {font-size: 1.5em;}
 .event_title {font-size: 1.8em;text-transform: uppercase;font-weight: bold}
 .event_info { font-style: italic;font-size: 1.5em;width: 30%;opacity: 0.8}
 
