--- a/scss/header.scss
+++ b/scss/header.scss
@@ -24,7 +24,7 @@ header {
     height: $header_height;
     width: 80%;
     margin:0 10%;
-    background: url('../images/logo.png') no-repeat center center;
+    background: url('../images/logo.svg') no-repeat center center;
     background-size: contain;
   }
 
