mobile stlye;added clndr

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,7 +7,7 @@ $font-size: 1.5em;
 $background-color: #223;
 $primary_color: #444;
 $box-color: #efefef;
-
+$light_grey: #f1f1f1;
 
 
 
@@ -18,6 +18,8 @@ $event_image_height: 250px;
 
 $social_bar_width: 50px;
 
+
+$transition_time: 0.3s;
 
 
 
