--- a/scss/global.scss
+++ b/scss/global.scss
@@ -7,6 +7,7 @@
 @import "typography";
 @import "header";
 @import "footer";
+@import "calendar";
 
 body {
   color: $font-color;
@@ -32,15 +33,16 @@ section {
 
 }
 
-#single_event_section {
+#single_section {
   padding:0;
 
   min-height: 700px;
 
-  .event_text {
+  .single_text {
     position: relative;
     z-index: 10;
     margin:180px 0 100px;
+
   }
 
   audio {
@@ -48,36 +50,60 @@ section {
     margin:0 0 10px;
   }
 
+
+
   h1 {
-    color: white;
-    font-weight: bold;
-    padding:0px 0 4px;
-    font-size: 5em;
+    padding:0 0 4px;
   }
+
   p.meta {
     padding: 0 0 5px
+  }
+  .single_post {
+    p {
+      max-width: 750px;
+
+    }
+    p.meta {
+      padding:0 0 30px;
+    }
   }
 
 }
 
-#single_event_background {
+#single_background {
   position: absolute;
   @extend .image_from_background;
   height: 600px;
   width: 100%;
   top:0;
   z-index: -1;
-  .gradient {
-    height: 100%;
-    @include linear-gradient( transparentize($background-color, 0.4), $background-color  );
-  }
+
 }
 
 
 
 #eventSearchForm {
-  padding-top:100px;
+  padding-top:10px;
+  input {
+    margin:0 0 10px;
+    width: 100%;
+  }
+
 }
+
+
+@media (min-width: 768px) {
+  #eventSearchForm {
+    input {
+      width: auto;
+    }
+    }
+}
+
+
+
+
 
 .date_container {
   float:left;
@@ -88,7 +114,7 @@ section {
   font-size: 2.6em;
   text-transform: uppercase;
   display: block;
-   opacity: 0.7;
+  opacity: 0.7;
 
 }
 .day {
@@ -96,6 +122,8 @@ section {
   font-size: 8em;
   font-weight: bold;
 }
+
+
 
 
 
@@ -118,6 +146,15 @@ section {
   overflow: hidden;
   padding: 0;
   margin:0 0 60px;
+
+
+    h1 {
+      color: white;
+      font-weight: bold;
+      padding:0 0 30px;
+      font-size: 5em;
+    }
+
 
   ul#featured_slides {
     position: relative;
@@ -146,13 +183,6 @@ section {
         z-index: 10;
       }
 
-      h1 {
-        color: white;
-        font-weight: bold;
-        padding:0 0 30px;
-        font-size: 7em;
-      }
-
       p {
         text-align: center;
         color: white;
@@ -177,22 +207,41 @@ section {
 }
 
 
+@media (min-width: 768px) {
+  #featured_section     h1 {
+      font-size: 7em;
+    }
+}
+
+
+
 
 .section_prochainement {
 
   .event_row {
     margin-bottom:100px;
+    position: relative;
 
     .image_from_background {
       background-color: transparentize(white, 0.6);
+      margin-bottom: 10px;
     }
 
-      h3  a {
+
+    .date_container {
+      float: none;
+      margin: 0;
+      .month, .day {
+        font-size: 5em;display: inline-block;
+      }
+    }
+
+    h3  a {
       display: block;
 
 
       &:link, &:visited, &:active {
-          color: white;
+        color: white;
       }
       &:hover {
 
@@ -208,12 +257,12 @@ section {
 table#more_events {
   a {
     &:link, &:visited, &:active {
-        color: white;
+      color: white;
     }
   }
-.event_date {font-size: 1.5em;}
-.event_title {font-size: 1.8em;text-transform: uppercase;font-weight: bold}
-.event_info { font-style: italic;font-size: 1.5em;width: 30%;opacity: 0.8}
+  .event_date {font-size: 1.5em;}
+  .event_title {font-size: 1.8em;text-transform: uppercase;font-weight: bold}
+  .event_info { font-style: italic;font-size: 1.5em;width: 30%;opacity: 0.8}
 
 }
 
@@ -248,9 +297,9 @@ table#more_events {
 // NEWS
 .section_news {
   .news_img {
-      @extend .image_from_background;
-      height: 200px;
-      margin:10px 0 20px;
+    @extend .image_from_background;
+    height: 200px;
+    margin:10px 0 20px;
   }
 
   h3 {
@@ -258,7 +307,7 @@ table#more_events {
   }
 
   p {
-  color: transparentize(white, 0.5);
+    color: transparentize(white, 0.5);
   }
 
   a {
@@ -273,29 +322,29 @@ table#more_events {
 // PARTNERS
 .partenaire_inner{background-repeat:no-repeat;-webkit-background-size:contain;background-size:contain;background-position:center center;width:60%;margin:0 20% 5px;height:100px}
 .bx-wrapper {
-    position: relative;
-    margin: 0 auto 60px;
-    padding: 0;
-    -ms-touch-action: pan-y;
-    touch-action: pan-y;
+  position: relative;
+  margin: 0 auto 60px;
+  padding: 0;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
 }
 .bx-controls-direction a {
-    background: url('../images/chevron-l.svg') center center no-repeat;
-    -webkit-background-size: 18px 18px;
-    background-size: 18px;
-    opacity: 0.7;
-    height: 50px;
-    text-indent: -9999px;
-    width: 30px;
-    position: absolute;
-    left: -20px;
-    top: 40%;
-    top: calc(50% - 25px);
+  background: url('../images/chevron-l.svg') center center no-repeat;
+  -webkit-background-size: 18px 18px;
+  background-size: 18px;
+  opacity: 0.7;
+  height: 50px;
+  text-indent: -9999px;
+  width: 30px;
+  position: absolute;
+  left: -20px;
+  top: 40%;
+  top: calc(50% - 25px);
 }
 .bx-controls-direction a.bx-next {
-    background-image: url('../images/chevron-r.svg');
-    left: auto;
-    right: -20px;
+  background-image: url('../images/chevron-r.svg');
+  left: auto;
+  right: -20px;
 }
 
 
@@ -303,33 +352,33 @@ table#more_events {
 
 
 .loading {
-	animation: spin 1s linear infinite;
-	width:20px;
-	display: inline-block;
-	height: 20px;
-	border:3px solid $primary_color;
-	border-radius: 7px;
-	position: relative;
-	text-align: center;
-	margin: auto;
-	overflow: hidden;
+  animation: spin 1s linear infinite;
+  width:20px;
+  display: inline-block;
+  height: 20px;
+  border:3px solid $primary_color;
+  border-radius: 7px;
+  position: relative;
+  text-align: center;
+  margin: auto;
+  overflow: hidden;
 
-	&:after, &:before {
-		@extend .loading;
-		content:'';
-		opacity: 0.6;
-		position:absolute;
-		top:5px;
-		left: 5px;
-		width: 14px;
-		height: 14px;
-	}
-	&:before {
-		bottom:5px;
-		top:auto;
-		left:auto;
-		right:5px;
-	}
+  &:after, &:before {
+    @extend .loading;
+    content:'';
+    opacity: 0.6;
+    position:absolute;
+    top:5px;
+    left: 5px;
+    width: 14px;
+    height: 14px;
+  }
+  &:before {
+    bottom:5px;
+    top:auto;
+    left:auto;
+    right:5px;
+  }
 }
 
 
