--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -1,8 +1,17 @@
 @import "variables";
 
+h1  {
+  padding:0 0 40px;
+  color: white;
+  font-weight: bold;
+  font-size: 4em;
+}
+
+
+
 h2 {
   text-transform: uppercase;
-  font-size: 4.4em;
+  font-size: 3em;
   padding:0 0 40px;
   font-weight: bold;
 }
@@ -18,6 +27,14 @@ h3 {
 h4 {
   font-size: ($font-size * 1.5);
 }
+
+
+@media (min-width: 768px) {
+  h1 {font-size: 5em;}
+  h2 {font-size: 4.4em}
+
+}
+
 
 p {
   font-size: $font-size;
