--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -7,16 +7,17 @@
 {
   overflow: hidden;
   display: none;
-  max-width: 387px;
+  max-width: 500px;
+  margin: auto;
 
   #reset {
     cursor: pointer;
-    padding:10px;
-    text-align: center;
+    // padding:10px;
+    // text-align: center;
     font-weight: bold;
     font-size: 13px;
-    background: #777;
-    color: white;
+    // background: #777;
+    // color: white;
     text-transform: uppercase;
 
   }
@@ -90,8 +91,8 @@
         border-bottom: 1px solid transparentize(white, 0.5);
 
         &.event {
-          background-color: lighten($primary_color, 30);
-          color: black;
+          background-color: lighten($background-color, 30);
+          color: white;
           transition: background-color $transition_time;
           cursor: pointer;
           &:hover
@@ -115,7 +116,7 @@
 
       .headers
       {
-        background-color:  darken($light_grey,20);
+        background-color:  $background-color;
         padding-top: 10px;
         padding-bottom: 10px;
 
@@ -124,7 +125,7 @@
           width: 14.285714286%;
           display: inline-block;
           text-align: center;
-          color: black;
+          color: white;
         }
       }
     }
