--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -16,7 +16,11 @@ body.event #social_bar {
 
 
 #social_bar {
-  position: static;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+      z-index: 1000;
 
   transition: all 0.3s;
 
@@ -29,6 +33,8 @@ body.event #social_bar {
 
     text-align: center;
       background: darken($background-color, 5);
+      margin: 0;
+      padding: 0;
 
     li {
       display: inline-block;
@@ -42,6 +48,7 @@ body.event #social_bar {
         text-align: center;
         color: white;
         padding:10px;
+        border: 0;
 
 
         i {
@@ -61,8 +68,10 @@ body.event #social_bar {
   #social_bar {
     position: fixed;
     top:100px;
-    z-index: 1000;
+
+    width: auto;
     right: 0;
+    left: auto;
     transform: translateX($social_bar_width);
 
     ul {
