--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -14,19 +14,19 @@ table {	border-collapse: collapse;	border-spacing: 0}
   box-sizing: border-box;}
 
 .showOnMobile {
-  visibility: visible;
+  visibility: visible;height: auto;
 }
 .showOnComputer {
-  visibility: hidden;
+  visibility: hidden;height: 0;
 }
 
 
 @media (min-width: 768px) {
   .showOnMobile {
-    visibility: hidden;
+    visibility: hidden;height: auto;
   }
   .showOnComputer {
-    visibility: visible;
+    visibility: visible;height: 0;
   }
 
 
