--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,94 +1,133 @@
 @import "variables";
 
 footer {
-  background: darken($background-color, 5);
-  color: white;
-  padding:20px 0;
-  margin:40px 0 0;
-  text-align: center;
+    background: darken($background-color, 5);
+    color: white;
+    padding:20px 0;
+    margin:40px 0 0;
+    text-align: center;
 
 }
 
 
 body.event #social_bar {
-  transform: translateX(0);
+    transform: translateX(0);
 }
 
 
 #social_bar {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-      z-index: 1000;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
 
-  transition: all 0.3s;
-
-
-  &.visible_bar {
-    transform: translateX(0);
-  }
-
-  ul {
-
-    text-align: center;
-      background: darken($background-color, 5);
-      margin: 0;
-      padding: 0;
-
-    li {
-      display: inline-block;
-      font-size: 2em;
-      padding: 0;
+    transition: all 0.3s;
 
 
-      a {
-
-        display: block;
-        text-align: center;
-        color: white;
-        padding:10px;
-        border: 0;
-
-
-        i {
-
-        }
-        &:hover {
-          background: lighten($background-color, 30);
-          color: white;
-        }
-      }
+    &.visible_bar {
+        transform: translateX(0);
     }
-  }
+
+    ul {
+
+        text-align: center;
+        background: darken($background-color, 5);
+        margin: 0;
+        padding: 0;
+
+        li {
+            display: inline-block;
+            font-size: 2em;
+            padding: 0;
+            position: relative;
+
+
+            span.tittle {
+                position: absolute;
+                right: 63px;
+                background: lighten($background-color,30);
+                font-size: 0.6em;
+                padding: 6px;
+                top: 13px;
+                border-radius: 4px  0 0 4px;
+                text-align: right;
+                display: none;
+
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    right: -12px;
+                    top: 0px;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 12px 0 12px 12px;
+                    border-color: transparent transparent transparent lighten($background-color,30);
+                    display: block;
+                }
+            }
+
+            &:hover span.tittle {
+                animation: comeIn 0.3s;
+                display: none;
+            }
+
+
+            a {
+
+                display: block;
+                text-align: center;
+                color: white;
+                padding:10px;
+                border: 0;
+
+
+                i {
+
+                }
+                &:hover {
+                    background: lighten($background-color, 30);
+                    color: white;
+                }
+            }
+        }
+    }
 }
 
 
 @media (min-width: 768px) {
-  #social_bar {
-    position: fixed;
-    top:100px;
+    #social_bar {
+        position: fixed;
+        top:100px;
 
-    width: auto;
-    right: 0;
-    left: auto;
-    transform: translateX($social_bar_width);
+        width: auto;
+        right: 0;
+        left: auto;
+        transform: translateX($social_bar_width);
 
-    ul {
-        background: none;
-        width:$social_bar_width;
-        li {
-          display: block;
-          a {
-            height: $social_bar_width;
-            line-height: $social_bar_width;
-            padding: 1px;
-              background: white;
-              color: black;
-          }
+        ul {
+            background: none;
+            width:$social_bar_width;
+            li {
+                display: block;
+
+                &:hover {
+                     span.tittle {
+                        display: inline-block;
+                     }
+                }
+                a {
+                    height: $social_bar_width;
+                    line-height: $social_bar_width;
+                    padding: 1px;
+                    background: white;
+                    color: black;
+                }
+            }
         }
     }
-  }
 
 
 }
