--- a/scss/global.scss
+++ b/scss/global.scss
@@ -505,6 +505,11 @@ table#more_events {
         width: 100%;
         max-width: 100%;
 
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
 
         @media (min-width: 768px) {
             width: #{100% / 3 };
