--- a/scss/global.scss
+++ b/scss/global.scss
@@ -540,3 +540,13 @@ table#more_events {
         }
     }
 }
+
+
+.espace-pro a {display: inline-block;margin-bottom: 5px; border-bottom: 0; text-decoration: none;}
+.espace-pro img {width: 100%; height: auto;}
+
+h6 a, a h6 {
+    padding: 15px 30px;
+    font-size: 1.5em;
+    border: solid 1px white!important;
+}
