--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -53,7 +53,7 @@ ul,ol {
 }
 
 a {
-  text-decoration: underline;
+  text-decoration: none;
   transition: all 0.3s;
   border-bottom: 0;
   text-shadow: 0 0 2px transparentize(white, 0.5);
