--- a/scss/header.scss
+++ b/scss/header.scss
@@ -28,7 +28,7 @@ header {
     display: inline-block;
     height: $header_height;
     width: 80%;
-    margin:0 10%;
+    margin:0 10% 0 0;
     background: url('../images/logo.svg') no-repeat center center;
     background-size: contain;
   }
