--- a/scss/partners.scss
+++ b/scss/partners.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     margin: 0 0 30px;
     padding: 0;
+    list-style: none!important;
 
     li {
             width: 50%;
